--- a/package.json
+++ b/package.json
@@ -100,67 +100,22 @@
 	},
 	"peerDependenciesMeta": {},
 	"devDependencies": {
-		"@clevercanyon/skeleton-dev-deps": "^1.0.64",
+		"@clevercanyon/skeleton-dev-deps": "^1.0.78",
 		"@cloudflare/workers-types": "^4.20221111.1",
 		"@types/crypto-js": "^4.1.1",
 		"@types/locutus": "^0.0.6",
 		"@types/lodash": "^4.14.191",
 		"@types/micromatch": "^4.0.2",
 		"@types/node": "^18.11.18",
-		"@types/react": "^18.0.26",
+		"@types/react": "^18.0.27",
 		"@types/react-dom": "^18.0.10"
 	},
 	"overrides": {},
 	"cpu": ["x64", "arm64"],
 	"os": ["darwin", "linux"],
 	"engines": {
-		"node": "^19.2.0",
-		"npm": "^8.19.3"
-	},
-	"scripts": {
-		"dev:": "npx vite dev",
-		"dev:help": "npx vite dev --help",
-		"dev:mode": "npx vite dev --mode=dev",
-		"preview:": "npx vite preview",
-		"preview:help": "npx vite preview --help",
-		"preview:dev": "npx vite preview --mode=dev",
-		"build:": "npx vite build",
-		"build:help": "npx vite build --help",
-		"build:dev": "npx vite build --mode=dev",
-		"build:ci": "npx vite build --mode=ci",
-		"build:stage": "npx vite build --mode=stage",
-		"build:prod": "npx vite build --mode=prod",
-		"postbuild:": "npx tsc --emitDeclarationOnly",
-		"postbuild:dev": "npx tsc --emitDeclarationOnly",
-		"postbuild:ci": "npx tsc --emitDeclarationOnly",
-		"postbuild:stage": "npx tsc --emitDeclarationOnly",
-		"postbuild:prod": "npx tsc --emitDeclarationOnly",
-		"envs:": "./dev/.files/bin/envs.js",
-		"envs:help": "./dev/.files/bin/envs.js --help",
-		"envs:push": "./dev/.files/bin/envs.js push",
-		"envs:pull": "./dev/.files/bin/envs.js pull",
-		"envs:keys": "./dev/.files/bin/envs.js keys",
-		"envs:encrypt": "./dev/.files/bin/envs.js encrypt",
-		"envs:decrypt": "./dev/.files/bin/envs.js decrypt",
-		"envs:setup": "./dev/.files/bin/envs.js setup",
-		"envs:setup:new": "./dev/.files/bin/envs.js setup --new",
-		"install:": "./dev/.files/bin/bash/npm-2sp.bash 'npm ci' './dev/.files/bin/install.js'",
-		"install:help": "./dev/.files/bin/bash/npm-2sp.bash 'npm ci' './dev/.files/bin/install.js --help'",
-		"install:project": "./dev/.files/bin/bash/npm-2sp.bash 'npm ci' './dev/.files/bin/install.js project'",
-		"update:": "./dev/.files/bin/update.js",
-		"update:help": "./dev/.files/bin/update.js --help",
-		"update:dotfiles": "./dev/.files/bin/update.js dotfiles",
-		"update:project": "./dev/.files/bin/bash/npm-2sp.bash 'npm run update:dotfiles' './dev/.files/bin/update.js project'",
-		"update:project:repos": "./dev/.files/bin/bash/npm-2sp.bash 'npm run update:dotfiles' './dev/.files/bin/update.js project --repos'",
-		"update:project:repos:pkgs": "./dev/.files/bin/bash/npm-2sp.bash 'npm run update:dotfiles' './dev/.files/bin/update.js project --repos --pkgs'",
-		"update:projects::": "./dev/.files/bin/update.js projects",
-		"update:projects::help": "./dev/.files/bin/update.js projects --help",
-		"update:projects::dotfiles": "./dev/.files/bin/update.js projects --run update:dotfiles",
-		"update:projects::project": "./dev/.files/bin/update.js projects --run update:project",
-		"update:projects::project:repos": "./dev/.files/bin/update.js projects --run update:project:repos",
-		"update:projects::project:repos:pkgs": "./dev/.files/bin/update.js projects --run update:project:repos:pkgs",
-		"wrangler:": "CLOUDFLARE_API_TOKEN=${C10N_CLOUDFLARE_TOKEN} npx wrangler",
-		"wrangler:help": "CLOUDFLARE_API_TOKEN=${C10N_CLOUDFLARE_TOKEN} npx wrangler --help"
+		"node": "^19.2.0 || ^19.4.0",
+		"npm": "^8.19.3 || ^9.2.0"
 	},
 	"workspaces": [],
 	"config": {
@@ -172,7 +127,15 @@
 				"build": {
 					"appType": "cma",
 					"targetEnv": "any"
-				}
+				},
+				"github": {
+					"teams": {
+						"engineers": "pull",
+						"architects": "push"
+					},
+					"configVersion": "1.0.0"
+				},
+				"npmjs": {}
 			}
 		}
 	}
