--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publishConfig": {
 		"access": "restricted"
 	},
-	"version": "1.0.133",
+	"version": "1.0.134",
 	"license": "GPL-3.0-or-later",
 	"name": "@clevercanyon/utilities",
 	"description": "Utilities for JavaScript apps running in any environment.",
@@ -177,6 +177,7 @@
 		"micromatch": "npm:@clevercanyon/micromatch.fork@^4.0.40",
 		"moize": "^6.1.6",
 		"preact": "^10.17.0",
+		"preact-render-to-string": "^6.2.1",
 		"semver": "^7.5.4",
 		"wouter-preact": "^2.11.0"
 	},
