--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Wed, Sep 20, 2023, 10:59:57 PM EDT.
+# Last generated Thu, Sep 21, 2023, 3:26:06 AM EDT.
 
 [production]
 last 1 chrome versions
