--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Wed, Sep 20, 2023, 10:59:57 PM EDT.
+# Last generated using `./wrangler.mjs` Thu, Sep 21, 2023, 3:26:07 AM EDT.
 ##
 
 compatibility_date = "2023-08-15"
