--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Jan 13, 2024 12:05 PM UTC.
+ * Last generated using `./tsconfig.mjs` Jan 16, 2024 3:39 PM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
@@ -112,6 +112,12 @@
             "vite/client",
             "@types/mdx",
             "unplugin-icons/types/preact",
+            "dayjs/plugin/advancedFormat",
+            "dayjs/plugin/customParseFormat",
+            "dayjs/plugin/localizedFormat",
+            "dayjs/plugin/timezone",
+            "dayjs/plugin/toObject",
+            "dayjs/plugin/utc",
             "@types/node",
             "@types/semver",
             "@types/micromatch",
