--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Jan 22, 2024 9:32 PM UTC.
+# Last generated Jan 23, 2024 3:33 AM UTC.
 
 # Locals
 
