--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Jan 22, 2024 9:32 PM UTC.
+ * Last generated using `./tsconfig.mjs` Jan 23, 2024 3:33 AM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
