--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 6, 2024 11:37 AM UTC.
+# Last generated Feb 8, 2024 6:57 PM UTC.
 
 # Locals
 
