--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 9, 2024 4:55 AM UTC.
+# Last generated Feb 9, 2024 9:10 PM UTC.
 
 # Locals
 
