--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Feb 9, 2024 4:55 AM UTC.
+ * Last generated using `./settings.mjs` Feb 9, 2024 9:10 PM UTC.
  */
 {
     "editor.formatOnType": false,
