--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 9, 2024 10:51 PM UTC.
+# Last generated Feb 10, 2024 8:10 AM UTC.
 
 [production]
 node >= 20.9.0
