--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Feb 9, 2024 10:51 PM UTC.
+ * Last generated using `./tsconfig.mjs` Feb 10, 2024 8:10 AM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
