--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Feb 9, 2024 10:51 PM UTC.
+# Last generated using `./wrangler.mjs` Feb 10, 2024 8:10 AM UTC.
 ##
 
 send_metrics = false
