--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 11, 2024 11:01 AM UTC.
+# Last generated Feb 11, 2024 5:51 PM UTC.
 
 # Default
 
