--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 12, 2024 4:52 AM UTC.
+# Last generated Feb 13, 2024 3:20 PM UTC.
 
 # Packages
 
