--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Feb 12, 2024 4:52 AM UTC.
+# Last generated using `./wrangler.mjs` Feb 13, 2024 3:20 PM UTC.
 ##
 
 send_metrics = false
