--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 13, 2024 3:20 PM UTC.
+# Last generated Feb 14, 2024 3:34 AM UTC.
 
 [production]
 node >= 20.9.0
