--- a/.dockerignore
+++ b/.dockerignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 14, 2024 3:34 AM UTC.
+# Last generated Feb 14, 2024 9:16 PM UTC.
 
 # Locals
 
