--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 14, 2024 9:45 PM UTC.
+# Last generated Feb 15, 2024 2:54 AM UTC.
 
 [production]
 node >= 20.9.0
