--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Feb 14, 2024 9:45 PM UTC.
+ * Last generated using `./settings.mjs` Feb 15, 2024 2:54 AM UTC.
  */
 {
     "editor.formatOnType": false,
