--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Feb 14, 2024 9:45 PM UTC.
+# Last generated using `./wrangler.mjs` Feb 15, 2024 2:54 AM UTC.
 ##
 
 send_metrics = false
