--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 16, 2024 7:57 AM UTC.
+# Last generated Feb 16, 2024 6:25 PM UTC.
 
 # Packages
 
