--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 16, 2024 11:09 PM UTC.
+# Last generated Feb 17, 2024 1:07 AM UTC.
 
 [production]
 node >= 20.9.0
