--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Feb 16, 2024 11:09 PM UTC.
+# Last generated using `./wrangler.mjs` Feb 17, 2024 1:07 AM UTC.
 ##
 
 send_metrics = false
