--- a/.dockerignore
+++ b/.dockerignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 17, 2024 4:40 AM UTC.
+# Last generated Feb 17, 2024 12:02 PM UTC.
 
 # Locals
 
