--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Feb 17, 2024 4:40 AM UTC.
+ * Last generated using `./settings.mjs` Feb 17, 2024 12:02 PM UTC.
  */
 {
     "editor.formatOnType": false,
