--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 17, 2024 9:07 PM UTC.
+# Last generated Feb 18, 2024 9:20 AM UTC.
 
 # Default
 
