--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Feb 17, 2024 9:07 PM UTC.
+ * Last generated using `./settings.mjs` Feb 18, 2024 9:20 AM UTC.
  */
 {
     "editor.formatOnType": false,
