--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 24, 2024 10:58 AM UTC.
+# Last generated Feb 24, 2024 1:41 PM UTC.
 
 # Default
 
