--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "1.0.861",
+    "version": "1.0.862",
     "license": "GPL-3.0-or-later",
     "name": "@clevercanyon/utilities",
     "description": "Utilities for JavaScript apps running in any environment.",
@@ -326,7 +326,7 @@
         "ignore": "5.3.0",
         "ip-regex": "5.0.0",
         "micro-memoize": "4.1.2",
-        "micromatch": "npm:@clevercanyon/micromatch.fork@^4.0.132",
+        "micromatch": "npm:@clevercanyon/micromatch.fork@^4.0.133",
         "parse-css-color": "0.2.1",
         "preact": "10.19.2",
         "preact-render-to-string": "6.3.1",
@@ -337,14 +337,14 @@
     "optionalDependencies": {},
     "bundleDependencies": [],
     "devDependencies": {
-        "@clevercanyon/dev-deps": "^1.0.360"
+        "@clevercanyon/dev-deps": "^1.0.361"
     },
     "overrides": {},
     "cpu": ["x64", "arm64"],
     "os": ["darwin", "linux"],
     "engines": {
-        "node": "^20.5.0 || ^20.9.0",
-        "npm": "^9.8.0 || ^10.1.0"
+        "node": "^20.5.0 || ^20.9.0 || ^21.6.2",
+        "npm": "^9.8.0 || ^10.1.0 || ^10.2.4"
     },
     "config": {
         "c10n": {
