--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 25, 2024 7:40 AM UTC.
+# Last generated Feb 25, 2024 12:22 PM UTC.
 
 # Locals
 
