--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Feb 25, 2024 7:40 AM UTC.
+ * Last generated using `./tsconfig.mjs` Feb 25, 2024 12:22 PM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
